--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,11 +28,11 @@ jobs:
 
       - name: Build Linux binary
         run: |
-          ./c3/c3c build --target linux-x64
+          ./c3/c3c build flappybird
 
       - name: Build Windows binary
         run: |
-          ./c3/c3c build --target windows-x64
+          ./c3/c3c build flappybird-win
 
       - name: Upload binaries
         uses: actions/upload-artifact@v4
